--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     // This dependency is used by the application.
     implementation libs.guava
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
-    compileOnly 'org.projectlombok:lombok:1.18.32'
+//    compileOnly 'org.projectlombok:lombok:1.18.32'
     implementation 'org.mindrot:jbcrypt:0.4'
 
 
